Adds homepage testimonials section

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -110,6 +110,32 @@
     </div>
   </section>
 
+  <section id="testimonials">
+    <h1><span class="cursive">Testi</span>monials</h1>
+
+    <div id="quotes" class="Grid">
+      <div class="Grid-cell u-size1of2 quote">
+        <p>
+          We have tried several other subscription boxes and so far Hippo Tales is the one we decided to keep. The box is very thoughtful and my kid loves unwrapping the box.
+        </p>
+        <p class="author">
+          Karen P.
+        </p>
+      </div>
+      <div class="Grid-cell u-size1of2 quote">
+        <p>
+          We absolutely love the books that come in Hippo Tales box.
+        </p>
+        <p class="author">
+          Jessica M.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="social-media">
+
+  </section>
 </main>
 
 <script>
