--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -246,24 +246,27 @@ h2 {
 /* HOMEPAGE THREE SIMPLE STEPS */
 /* ########################################### */
 
-#three-steps {
+#three-steps, #testimonials {
+  padding: 30px 0;
+
   h1 {
     text-align: center;
-    font-size: 48px;
+    font-size: 56px;
     font-weight: 400;
-    margin: 40px 0;
+    padding: 30px;
   }
 
-  .sign-up-links {
-    margin-top: 110px;
-    margin-bottom: 80px;
-    text-align: center;
-  }
   .button, .button-yellow {
     display: inline;
     margin: 0 auto;
     margin: 10px 20px;
   }
+}
+
+.sign-up-links {
+  margin-top: 110px;
+  margin-bottom: 80px;
+  text-align: center;
 }
 
 #simple-steps {
@@ -294,4 +297,40 @@ h2 {
     width: 80%;
     font-weight: 100;
   }
+}
+
+#testimonials {
+  background-color: rgb(247, 247, 247);
+  text-align: center;
+
+  #quotes {
+    width: 80%;
+    margin: 30px auto;
+
+    .quote {
+      margin: 0 auto;
+
+      p {
+        font-style: italic;
+        text-align: center;
+        line-height: 1.4;
+        width: 90%;
+        margin: 0 auto;
+        font-size: 1.3em;
+      }
+
+      .author {
+        margin-top: 30px;
+        color: rgb(119, 151, 138);
+      }
+    }
+  }
+}
+
+.author {
+
+}
+
+#social-media {
+  
 }
