--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,18 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <div class="whole-page-wrap">
+      <%= yield %>
+    </div>
 
-  <%= yield %>
-
+    <footer>
+      <ul>
+        <li><a href="#"><%= image_tag "social-facebook.png", size: "40x40" %></a></li>
+        <li><a href="#"><%= image_tag "social-twitter.png", size: "40x40" %></a></li>
+        <li><a href="#"><%= image_tag "social-youtube.png", size: "40x40" %></a></li>
+        <li><a href="#"><%= image_tag "social-google-plus.png", size: "40x40" %></a></li>
+      </ul>
+      <span>&copy 2016 Hippo Tales. All Rights Reserved.</span>
+    </footer>
   </body>
 </html>
