--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require suit
+ *= require homepage
+ *= require header
+ *= require footer
  *= require_tree .
  *= require_self
  */
