Creates 'Our Box' page, refactors header and CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,9 +12,10 @@
  *
  *= require suit
  *= require style
- *= require homepage
  *= require header
  *= require footer
+ *= require homepage
+ *= require our_box
  *= require responsive
  *= require_tree .
  *= require_self
