--- a/app/assets/stylesheets/homepage.scss.erb
+++ b/app/assets/stylesheets/homepage.scss.erb
@@ -48,10 +48,20 @@
   text-align: center;
 }
 
-#info-sections p {
-  line-height: 1.5;
-  padding-bottom: 45px;
-  text-align: center;
+#info-sections {
+  p {
+    line-height: 1.5;
+    padding-bottom: 45px;
+    text-align: center;
+  }
+
+  h2 {
+    text-align: center;
+    color: $book-green-color;
+    font-size: 36px;
+    font-weight: 400;
+    display: inline-block;
+  }
 }
 
 .subscribe-info {
