--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -9,14 +9,21 @@ html, body {
   margin: 0;
 }
 
-h2 {
-  text-align: center;
-  color: $book-green-color;
-  font-size: 36px;
-  font-weight: 400;
-  display: inline-block;
-}
-
 .cursive {
   font-family: $cabin-sketch-family;
+}
+
+#page-title {
+  background-color: $header-footer-blue;
+
+  h1 {
+    color: white;
+    width: 78%;
+    margin: 0 auto;
+    padding: 30px 0;
+    text-align: right;
+    font-family: $muli-family;
+    font-weight: 400;
+    font-size: 48px;
+  }
 }
