--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,2 +1,4 @@
 $book-green-color: rgb(0, 139, 139);
 $blue-background: rgb(225, 240, 237);
+$header-footer-blue: rgb(185, 223, 222);
+$selected-menu-item: rgb(85, 85, 85);
