--- a/app/assets/stylesheets/homepage.scss.erb
+++ b/app/assets/stylesheets/homepage.scss.erb
@@ -9,10 +9,6 @@
 /* SLIDESHOW */
 /* ########################################### */
 
-#homepage {
-  font-family: $muli-family;
-}
-
 #baby-pictures-container {
   height: 550px;
 }
@@ -96,7 +92,7 @@
   text-align: center;
   padding: 15px 25px;
   font-size: 1.3em;
-  border-radius: 15px;
+  border-radius: 3px;
 }
 
 .button {
@@ -105,7 +101,7 @@
 }
 
 .button-yellow {
-  background-color: rgb(223, 218, 73);
+  background-color: $button-yellow;
 }
 
 .learn-more {
