Moves join view to SubscriptionsController

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -107,6 +107,7 @@ a:hover {
 
 /* Hightlight menu item for selected page */
 #homepage #menu-how-it-works a,
+#join #menu-join a,
 #our-box #menu-our-box a {
   color: $selected-menu-item;
 }
